--- a/index.html
+++ b/index.html
@@ -33,21 +33,26 @@
 					</div>
 				</div>	
 			</div>
-			<div class="header-right">
-				<div class="header-call">
-					<span class="header-call-text">Звоните бесплатно</span>
-					<span class="header-call-number">8 800 201 32 36</span>
-				</div>
-				<div class="header-kontakts-container">
-					<div class="header-kontakts-container-text">
-						<span>Контакты</span>
-					</div>	
-					<div class="header-kontakts-container-img nonactive">
-						<img src="image/header/search.svg">
+			<div class="header-right desktop">
+				<div class="header-right-container">
+					<div class="header-call">
+						<span class="header-call-text">Звоните бесплатно</span>
+						<span class="header-call-number">8 800 201 32 36</span>
+					</div>
+					<div class="header-kontakts-container">
+						<div class="header-kontakts-container-text">
+							<span>Контакты</span>
+						</div>	
+						<div class="header-kontakts-container-img nonactive">
+							<img src="image/header/search.svg">
+						</div>
 					</div>
 				</div>			
 			</div>	
-		</div>		
+		</div>
+		<div class="header-kontakts-container-img-mob mobile">
+			<img src="image/header/search.svg">
+		</div>	
 	</header>
 
 	<section class="home-front">
@@ -99,7 +104,7 @@
 				</button>
 			</div>
 			<div class="home-front-form-person">
-				<p>Отправляя заявку вы соглашаетесь с <a href="">Условиями обработки персональных данных</a></p>
+				<span>Отправляя заявку вы соглашаетесь с <a href="">Условиями обработки персональных данных</a></span>
 			</div>
 		</div>
 	</section>
