--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<span class="home-front-foto-note-text">Нас знают в ГИБДД и судах с 2000 года</span>
 				</div>
 			</div>
-			<img class="home-front-foto-note-up mobile" src="image/home/up.png">
+			<img class="home-front-foto-note-up mobile" src="image/home/up.svg">
 		</div>
 		<div class="home-front-form">
 			<h3 class="home-front-form-title">Получите консультацию бесплатно</h3>
