--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 	<!-- модалки -->
 	<!-- страница МЕНЮ 1 -->
 	<div class="menu nonactive">
-		<div class="modal menu nonactive"><!--  -->
+		<div class="modal menu nonactive">
 		<div class="modal-menu-container">
 			<div class="modal-menu-header">
 				<img src="image/modals/logo.svg">
@@ -747,7 +747,7 @@
 
 	<!-- страница МЕНЮ 2 -->
 	<div class="menu nonactive">
-		<div class="modal"><!--  -->
+		<div class="modal">
 			<div class="modal-menu-container">
 				<div class="modal-menu-header">
 					<img src="image/modals/logo.svg">
