--- a/index.html
+++ b/index.html
@@ -170,9 +170,8 @@
 						<span class="home-front-selects-items-menu-item">
 							Начинающему оратору отточить
 						</span>
-					</div>
-							
-						</div>
+					</div>							
+				</div>
 				<img src="image/home/arrow3.svg">
 			</div>				
 		</div>
@@ -570,12 +569,15 @@
 				<div class="home-chances-items-item">
 					<span class="home-chances-span">12.26</span>
 					<p class="home-chances-p">Отказ от медицинского освидетельствования</p>
-					<img class="home-chances-img" src="image/home/arrow2.svg">
+					<img class="home-chances-img" src="image/home/Arrow2.svg">
 				</div>
 				<div class="home-chances-items-item-active">
 					<span class="home-chances-span">12.8</span>
 					<p class="home-chances-p">Управление в состоянии опьянения</p>
-					<img class="home-chances-img" src="image/home/arrow21.svg">
+					<!-- <svg class="home-chances-arrow" xmlns="http://www.w3.org/2000/svg" width="26" height="12" viewBox="0 0 26 12" fill="none">
+						<path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76257 25.5303 5.46967L20.7574 0.696701C20.4645 0.403808 19.9896 0.403807 19.6967 0.696701C19.4038 0.989594 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM-6.55671e-08 6.75L25 6.75L25 5.25L6.55671e-08 5.25L-6.55671e-08 6.75Z" fill="#C5B927"/>
+					</svg> -->
+					<img class="home-chances-img" src="image/home/Arrow21.svg">
 				</div>
 				<div class="home-chances-items-item">
 					<span class="home-chances-span">12.15.4(5)</span>
