--- a/index.html
+++ b/index.html
@@ -582,17 +582,17 @@
 				<div class="home-chances-items-item">
 					<span class="home-chances-span">12.15.4(5)</span>
 					<p class="home-chances-p">Выезд на встречную полосу</p>
-					<img class="home-chances-img" src="image/home/arrow2.svg">
+					<img class="home-chances-img" src="image/home/Arrow2.svg">
 				</div>
 				<div class="home-chances-items-item">
 					<span class="home-chances-span">12.27</span>
 					<p class="home-chances-p">Скрытие с места ДТП</p>
-					<img class="home-chances-img" src="image/home/arrow2.svg">
+					<img class="home-chances-img" src="image/home/Arrow2.svg">
 				</div>
 				<div class="home-chances-items-item">
 					<span class="home-chances-span">12.2</span>
 					<p class="home-chances-p">Управление без номеров и скрытие номеров</p>
-					<img class="home-chances-img" src="image/home/arrow2.svg">
+					<img class="home-chances-img" src="image/home/Arrow2.svg">
 				</div>
 			</div>
 		</div>		
