--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 			</div>	
 		</div>
 		<div class="header-kontakts-container-img-mob mobile">
-			<img src="image/header/search.svg">
+			<div class="header-kontakts-container-img-mob-m">
+				<img src="image/header/search.svg">
+			</div>
 		</div>	
 	</header>
 
@@ -150,7 +152,8 @@
 				<div class="active">
 					<div class="home-front-selects-items-menu">
 						<span class="home-front-selects-items-menu-item">
-							Сайт рыбатекст
+							<!-- Сайт рыбатекст -->
+							<a href="pages/pagesecond_alcohol.html">Page 2</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Поможет дизайнеру, верстальщику
