--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@
 							<a href="pages/pagesecond_alcohol.html">Page 2</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
-							Поможет дизайнеру, верстальщику
+							<!-- Поможет дизайнеру, верстальщику -->
+							<a href="pages/pagethird_cashback.html">Page 3</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
-							Вебмастеру сгенерировать 
+							<!-- Вебмастеру сгенерировать --> 
+							<a href="pages/pagefourth.html">Page 4</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Несколько абзацев
@@ -187,7 +189,7 @@
 					<span class="home-front-foto-note-text">Нас знают в ГИБДД и судах с 2000 года</span>
 				</div>
 			</div>
-			<img class="home-front-foto-note-up mobile" src="image/home/up.svg">
+			<img class="home-front-foto-note-up" src="image/home/up.svg">
 		</div>
 		<div class="home-front-form">
 			<h3 class="home-front-form-title">Получите консультацию бесплатно</h3>
@@ -239,7 +241,7 @@
 					</div>
 				</div>	
 			</div>
-		</div>				
+		</div>		
 	</section>
 
 	<section class="home-about">
@@ -247,7 +249,7 @@
 			<div class="home-about-us-button-active">
 				<div class="home-about-us-title">
 					<span>О нас</span>
-					<img class="" src="image/home/accord-close.png">
+					<img class="" src="image/home/accord_close.png">
 					<img class="nonactive" src="image/home/accord.svg">
 				</div>	
 			</div>
@@ -577,9 +579,6 @@
 				<div class="home-chances-items-item-active">
 					<span class="home-chances-span">12.8</span>
 					<p class="home-chances-p">Управление в состоянии опьянения</p>
-					<!-- <svg class="home-chances-arrow" xmlns="http://www.w3.org/2000/svg" width="26" height="12" viewBox="0 0 26 12" fill="none">
-						<path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76257 25.5303 5.46967L20.7574 0.696701C20.4645 0.403808 19.9896 0.403807 19.6967 0.696701C19.4038 0.989594 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM-6.55671e-08 6.75L25 6.75L25 5.25L6.55671e-08 5.25L-6.55671e-08 6.75Z" fill="#C5B927"/>
-					</svg> -->
 					<img class="home-chances-img" src="image/home/Arrow21.svg">
 				</div>
 				<div class="home-chances-items-item">
