--- a/pages/pagesecond_alcohol.html
+++ b/pages/pagesecond_alcohol.html
@@ -84,23 +84,23 @@
 	</header>
 
 	<section class="pagesecond-front">
-		<div class="home-front-selects desktop">
-			<div class="home-front-selects-items left">
+		<div class="container home-front-selects desktop">
+			<div class="home-front-selects-items">
 				<img class="home-front-selects-items-img" src="../image/home/icon1.svg">
 				<span class="home-front-selects-items-item">Вернуть права</span>
 				<div class="nonactive">
 					<div class="home-front-selects-items-menu">
 						<span class="home-front-selects-items-menu-item">
-								Сайт рыбатекст
+							Сайт рыбатекст
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Поможет дизайнеру, верстальщику
 						</span>
 						<span class="home-front-selects-items-menu-item">
-							Вебмастеру сгенерировать 
+							Вебмастеру сгенерировать
 						</span>
 						<span class="home-front-selects-items-menu-item">
-								Несколько абзацев
+							Несколько абзацев
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Более менее осмысленного текста
@@ -110,13 +110,13 @@
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Начинающему оратору отточить
-						</span>		
-					</div>							
+						</span>
+					</div>
 				</div>
 				<img src="../image/home/arrow3.svg">
 			</div>
-			<div class="home-front-selects-items middle">
-				<img class="home-front-selects-items-img"  src="../image/home/icon2.svg">
+			<div class="home-front-selects-items">
+				<img class="home-front-selects-items-img" src="../image/home/icon2.svg">
 				<span class="home-front-selects-items-item">Спор по ДТП</span>
 				<div class="nonactive">
 					<div class="home-front-selects-items-menu">
@@ -127,7 +127,7 @@
 							Поможет дизайнеру, верстальщику
 						</span>
 						<span class="home-front-selects-items-menu-item">
-							Вебмастеру сгенерировать 
+							Вебмастеру сгенерировать
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Несколько абзацев
@@ -140,27 +140,26 @@
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Начинающему оратору отточить
-						</span>		
-					</div>							
+						</span>
+					</div>
 				</div>
 				<img src="../image/home/arrow3.svg">
 			</div>
-			<div class="home-front-selects-items right">
-				<img class="home-front-selects-items-img"  src="../image/home/icon3.svg">
+			<div class="home-front-selects-items">
+				<img class="home-front-selects-items-img" src="../image/home/icon3.svg">
 				<span class="home-front-selects-items-item">Другие автоспоры</span>
 				<div class="nonactive">
 					<div class="home-front-selects-items-menu">
 						<span class="home-front-selects-items-menu-item">
-							Сайт рыбатекст
+							<a href="pages/pagesecond_alcohol.html">Page 2</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
-							Поможет дизайнеру, верстальщику
+							<a href="pages/pagethird_cashback.html">Page 3</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
-							Вебмастеру сгенерировать 
+							<a href="pages/pagefourth.html">Page 4</a>
 						</span>
-						<span class="home-front-selects-items-menu-item">
-							Несколько абзацев
+						<span class="home-front-selects-items-menu-item"><a href="pages/pagefifth.html">Page 5</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
 							Более менее осмысленного текста
@@ -171,13 +170,15 @@
 						<span class="home-front-selects-items-menu-item">
 							Начинающему оратору отточить
 						</span>
-					</div>							
+					</div>
 				</div>
 				<img src="../image/home/arrow3.svg">
-			</div>				
+			</div>
 		</div>
+
 <!-- ----------------- -->
 
+	<div class="container">
 		<div class="pagesecond-front-main">
 			<div class="pagesecond-front-main-title">
 				<h1>Вернём права за управление в состоянии алкогольного опьянения</h1>
@@ -245,9 +246,10 @@
 				</div>				
 			</div>
 		</div>
+	</div>
 	</section>
 
-	<section class="pagesecond-helper">
+	<section class="container pagesecond-helper">
 		<div class="pagesecond-helper-container">
 			<h1>Автоюрист поможет вернуть права за управление в состоянии опьянения</h1>
 			<div class="pagesecond-helper-items">
@@ -309,7 +311,7 @@
 	</section>
 	
 	<section class="pagesecond-form">
-		<div class="pagesecond-front-form">
+		<div class="container pagesecond-front-form">
 			<h3 class="pagesecond-front-form-title">Мы знаем 6 способов вернуть права за алкогольное опьянение</h3>
 			<h4 class="pagesecond-front-form-title-two">Один из них точно подойдет к Вашей ситуации. Оставьте заявку и узнайте их</h4>
 			<div class="pagesecond-front-form-input">
@@ -327,8 +329,8 @@
 		</div>
 	</section>
 
-	<section class="pagesecond-stages">
-		<div class="pagesecond-stages-container">
+	<section class=" pagesecond-stages">
+		<div class="container pagesecond-stages-container">
 			<h1>Сроки и этапы возврата прав после вынесения решения суда</h1>
 			<div class="pagesecond-stages-items">
 				<div class="pagesecond-stages-items-container">
@@ -372,57 +374,59 @@
 	</section>
 
 	<section class="pagesecond-practice">
-		<div class="pagesecond-practice-container">
-			<div class="pagesecond-practice-title-container">
-				<h1 class="pagesecond-practice-title">Судебная практика по возврату прав за управление <br> в состоянии алкогольного опьянения</h1>
-				<div class="pagesecond-practice-arrows desktop">
-					<img src="../image/pagesecond/arrow_left.svg">
-					<img src="../image/pagesecond/arrow_right.svg">
-				</div>
-			</div>
-			
-			<div class="pagesecond-practice-items">
-				<div class="pagesecond-practice-item-container">
-					<div class="pagesecond-practice-items-item">
-						<img src="../image/pagesecond/practice1.png">
+		<div class="container">
+			<div class="pagesecond-practice-container">
+				<div class="pagesecond-practice-title-container">
+					<h1 class="pagesecond-practice-title">Судебная практика по возврату прав за управление <br> в состоянии алкогольного опьянения</h1>
+					<div class="pagesecond-practice-arrows desktop">
+						<img src="../image/pagesecond/arrow_left.svg">
+						<img src="../image/pagesecond/arrow_right.svg">
 					</div>
 				</div>
-				<div class="pagesecond-practice-item-container">
-					<div class="pagesecond-practice-items-item">
-						<img src="../image/pagesecond/practice2.png">
+				
+				<div class="pagesecond-practice-items">
+					<div class="pagesecond-practice-item-container">
+						<div class="pagesecond-practice-items-item">
+							<img src="../image/pagesecond/practice1.png">
+						</div>
+					</div>
+					<div class="pagesecond-practice-item-container">
+						<div class="pagesecond-practice-items-item">
+							<img src="../image/pagesecond/practice2.png">
+						</div>
+					</div>
+					<div class="pagesecond-practice-item-container">
+						<div class="pagesecond-practice-items-item">
+							<img src="../image/pagesecond/practice3.png">
+						</div>
+					</div>
+					<div class="pagesecond-practice-item-container">
+						<div class="pagesecond-practice-items-item">
+							<img src="../image/pagesecond/practice4.png">
+						</div>
+					</div>
+					<div class="pagesecond-practice-item-container">
+						<div class="pagesecond-practice-items-item">
+							<img src="../image/pagesecond/practice5.png">
+						</div>
+					</div>
+					<div class="pagesecond-practice-item-container">
+						<div class="pagesecond-practice-items-item">
+							<img src="../image/pagesecond/practice6.png">
+						</div>
 					</div>
 				</div>
-				<div class="pagesecond-practice-item-container">
-					<div class="pagesecond-practice-items-item">
-						<img src="../image/pagesecond/practice3.png">
-					</div>
+				<div class="pagesecond-practice-circles mobile">
+					<div class="circle act"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
 				</div>
-				<div class="pagesecond-practice-item-container">
-					<div class="pagesecond-practice-items-item">
-						<img src="../image/pagesecond/practice4.png">
-					</div>
-				</div>
-				<div class="pagesecond-practice-item-container">
-					<div class="pagesecond-practice-items-item">
-						<img src="../image/pagesecond/practice5.png">
-					</div>
-				</div>
-				<div class="pagesecond-practice-item-container">
-					<div class="pagesecond-practice-items-item">
-						<img src="../image/pagesecond/practice6.png">
-					</div>
-				</div>
-			</div>
-			<div class="pagesecond-practice-circles mobile">
-				<div class="circle act"></div>
-				<div class="circle"></div>
-				<div class="circle"></div>
-				<div class="circle"></div>
 			</div>
 		</div>		
 	</section>
 
-	<section class="pagesecond-others">
+	<section class="container pagesecond-others">
 		<div class="pagesecond-others-container">
 			<div class="pagesecond-others-container-first">
 				<div class="pagesecond-others-first-items">
@@ -502,7 +506,8 @@
 				</div>
 			</div>
 			<div class="pagesecond-others-container-first">
-				<div class="pagesecond-others-first-items desktop">
+				<div class="desktop">
+					<div class="pagesecond-others-first-items">
 					<h3 class="pagesecond-others-first-items-title">Важно знать</h3>
 					<div class="pagesecond-others-first-items-item">
 						<span><a href="">Правила освидетельствования на алкогольное опьянение</a></span>
@@ -525,7 +530,9 @@
 					<div class="pagesecond-others-first-items-item">
 						<span><a href="">Адвокаты не берут дела</a></span>
 					</div>
-				</div>
+				</div>	
+			</div>
+				
 				<div class="pagesecond-others-first-items">
 					<h3 class="pagesecond-others-first-items-title">КоАП</h3>
 					<div class="pagesecond-others-first-items-item">
@@ -560,7 +567,7 @@
 		</div>
 	</section>
 
-	<section class="pagesecond-consultation">
+	<section class="container pagesecond-consultation">
 		<div class="pagesecond-consultation-container">
 			<h1>Получите консультацию бесплатно</h1>
 			<div class="pagesecond-consultation-inputs">
@@ -760,7 +767,6 @@
 				</div>
 				<div class="line"></div>
 				<div class="modal-menu-items">
-					<!-- <div class="line"></div> -->
 					<span class="modal-menu-font">Москва</span>
 					<span class="modal-menu-font">Санкт-Петербург</span>
 					<span class="modal-menu-font">Сочи</span>
