--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
 				<div class="active">
 					<div class="home-front-selects-items-menu">
 						<span class="home-front-selects-items-menu-item">
+							Поможет дизайнеру, верстальщик
+						</span>
+						<span class="home-front-selects-items-menu-item">
 							<a href="pages/pagesecond_alcohol.html">Page 2</a>
 						</span>
 						<span class="home-front-selects-items-menu-item">
@@ -175,11 +178,9 @@
 						</span>
 						<span class="home-front-selects-items-menu-item"><a href="pages/pagesixth.html">Page 6</a>
 						</span>
-						<span class="home-front-selects-items-menu-item">
-							Рыбы на русском языке
+						<span class="home-front-selects-items-menu-item"><a href="pages/pageseventh.html">Page 7</a>
 						</span>
-						<span class="home-front-selects-items-menu-item">
-							Начинающему оратору отточить
+						<span class="home-front-selects-items-menu-item"><a href="pages/pageeightth.html">Page 8</a>
 						</span>
 					</div>
 				</div>
