--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						</span>
 						<span class="home-front-selects-items-menu-item"><a href="pages/pageseventh.html">Page 7</a>
 						</span>
-						<span class="home-front-selects-items-menu-item"><a href="pages/pageeightth.html">Page 8</a>
+						<span class="home-front-selects-items-menu-item"><a href="pages/pageeighth.html">Page 8</a>
 						</span>
 					</div>
 				</div>
