edit page 7 title

--- a/pages/pageseventh.html
+++ b/pages/pageseventh.html
@@ -214,7 +214,7 @@
 									<img class="desktop" src="../image/pagesecond/tick_desk.svg">
 									<img class="mobile" src="../image/pagesecond/tick_mob.svg">
 									<p class="pagesecond-helper-items-item-text">
-										Жилищные споры<
+										Жилищные споры
 									</p>					
 								</div>
 								<div class="pagesecond-helper-items-item">
