--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
 						</span>
 						<span class="home-front-selects-items-menu-item"><a href="pages/pageeighth.html">Page 8</a>
 						</span>
+						<span class="home-front-selects-items-menu-item"><a href="pages/pageninth.html">Page 9</a>
+						</span>
+						<span class="home-front-selects-items-menu-item"><a href="pages/pagetenth.html">Page 10</a>
+						</span>
+						<span class="home-front-selects-items-menu-item"><a href="pages/pageeleventh.html">Page 11</a>
+						</span>
 					</div>
 				</div>
 				<img src="image/home/arrow3.svg">
